--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <video id="vid" height="550">
- <source type="video/mp4" src="https://github.com/Asadek14/SophiaOP.com/blob/main/flower.mov" loop>
+ <source type="video/mp4" src="flower.mov" loop>
 </video>
 <script>
 let first = true;
