--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ document.getElementById('vid').addEventListener('click', (e) => {
   if (first) {
     e.target.play();
   }
-  first = true;
+  first = false;
 });
 </script>
 </body>
