--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 let first = true;
 document.getElementById('vid').addEventListener('click', (e) => {
   if (first) {
-    e.target.play();
+    e.play();
   }
-  first = false;
+  first = true;
 });
 </script>
 </body>
