--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <video id="vid" height="550">
- <source type="video/.mov" src="flower.mov" loop>
+ <source src="flower.mov" loop>
 </video>
 <script>
 let first = true;
