--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </video>
 <script>
 let first = true;
-document.getElementById().addEventListener('click', (e) => {
+document.getElementById('vid').addEventListener('touch', (e) => {
   if (first) {
     e.target.play();
   }
